# ml-course

./: .gitignore  README.md  README.txt  RNN и гибридной архитектуры.ipynb  mnist_fashion_v1_.ipynb  Проект по классификации жанров фильмов на основе их кратких описаний.ipynb
computer-vision/car-classification-transfer-learning/: Final_Results_Analysis.ipynb  README.md  final_predictions.txt  requirements.txt
computer-vision/car-classification-transfer-learning/configs/: experiment_config.yaml
computer-vision/car-classification-transfer-learning/notebooks/: Transfer Learning Benchmark (Improved).ipynb  Transfer Learning Benchmark ResNet Fine-tuning vs Custom CNN for Car Classification.ipynb
computer-vision/car-classification-transfer-learning/scripts/: analyze.py  final_predictions.txt  predict.py  predict_simple.py  train.py
computer-vision/human-segmentation-coco/: README.md  final_test.py  main.py  minimal_example.py  quick_demo.py  requirements.txt  run.py  simple_test.py  success_demo.py  working_main.py
computer-vision/human-segmentation-coco/config/: default.yaml
computer-vision/human-segmentation-coco/notebooks/: YOLO for Human Instance Segmentation.ipynb
computer-vision/human-segmentation-coco/src/: data_loader.py  evaluation.py  segmentation.py  visualization.py
computer-vision/medical-image-segmentation/: .dockerignore  .gitignore  Dockerfile  README.md  demo_final.py  docker-compose.yml  pyproject.toml  requirements.txt  run_fixed.py
computer-vision/medical-image-segmentation/config/: inference_config.yaml  model_config.yaml  training_config.yaml
computer-vision/medical-image-segmentation/data/: __init__.py  dataset.py  synthetic_data.py
computer-vision/medical-image-segmentation/docs/: API.md  CONTRIBUTING.md  TROUBLESHOOTING.md
computer-vision/medical-image-segmentation/medical_image_segmentation/data/: augmentations.py  dataset.py  synthetic_data.py
computer-vision/medical-image-segmentation/medical_image_segmentation/training/: trainer.py
computer-vision/medical-image-segmentation/medical_image_segmentation/utils/: logger.py
computer-vision/medical-image-segmentation/notebooks/: Computer_Vision_UNet_for_Medical_Segmentation.ipynb
computer-vision/medical-image-segmentation/scripts/: demo.py  evaluate.py  train.py
computer-vision/medical-image-segmentation/tests/: test_data.py  test_models.py  test_training.py
generative-ai/face-generation-comparison/: Dockerfile  README.md  requirements.txt  start_api.py  start_system.py  train_models.py  web_interface.py
generative-ai/face-generation-comparison/.streamlit/: config.toml
mlops-production/conversion-prediction-service/: README.md  check_models.py  create_sample_data.py  requirements.txt  run_api.py  simple_api_final.py  train_simple_model.py
multi-modal/product-image-analysis/: README.md  app.py  requirements.txt  run_server.py  test_final.py
(+52 files in other folders)
